compiler/agentspeak/parser/AgentSpeakParser.py
# Generated from AgentSpeak.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class AgentSpeakParser ( Parser ):

    grammarFileName = "AgentSpeak.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "':-'", "'!'", "'@'", "':'", "'<-'", 
                     "'+'", "'-'", "'?'", "'~'", "'true'", "'not'", "'&'", 
                     "'|'", "'('", "')'", "';'", "'!!'", "'-+'", "'['", 
                     "']'", "','", "'<'", "'<='", "'>'", "'>='", "'=='", 
                     "'\\=='", "'='", "'=..'", "'*'", "'**'", "'/'", "'div'", 
                     "'mod'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ATOM", "NUMBER", "VAR", "STRING", "LOGICAL_VALUE", 
                      "WS", "LC", "BC" ]

    RULE_agent = 0
    RULE_init_bels = 1
    RULE_beliefs = 2
    RULE_rules = 3
    RULE_init_goals = 4
    RULE_plans = 5
    RULE_plan = 6
    RULE_triggering_event = 7
    RULE_literal = 8
    RULE_context = 9
    RULE_log_expr = 10
    RULE_simple_log_expr = 11
    RULE_body = 12
    RULE_body_formula = 13
    RULE_atomic_formula = 14
    RULE_list_of_terms = 15
    RULE_term = 16
    RULE_term_value = 17
    RULE_internal_action = 18
    RULE_list_structure = 19
    RULE_rel_expr = 20
    RULE_rel_term = 21
    RULE_arithm_expr = 22
    RULE_arithm_term = 23

    ruleNames =  [ "agent", "init_bels", "beliefs", "rules", "init_goals", 
                   "plans", "plan", "triggering_event", "literal", "context", 
                   "log_expr", "simple_log_expr", "body", "body_formula", 
                   "atomic_formula", "list_of_terms", "term", "term_value", 
                   "internal_action", "list_structure", "rel_expr", "rel_term", 
                   "arithm_expr", "arithm_term" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    ATOM=36
    NUMBER=37
    VAR=38
    STRING=39
    LOGICAL_VALUE=40
    WS=41
    LC=42
    BC=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class AgentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def init_bels(self):
            return self.getTypedRuleContext(AgentSpeakParser.Init_belsContext,0)


        def init_goals(self):
            return self.getTypedRuleContext(AgentSpeakParser.Init_goalsContext,0)


        def plans(self):
            return self.getTypedRuleContext(AgentSpeakParser.PlansContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_agent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAgent" ):
                listener.enterAgent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAgent" ):
                listener.exitAgent(self)




    def agent(self):

        localctx = AgentSpeakParser.AgentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_agent)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.init_bels()
            self.state = 49
            self.init_goals()
            self.state = 50
            self.plans()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_belsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def beliefs(self):
            return self.getTypedRuleContext(AgentSpeakParser.BeliefsContext,0)


        def rules(self):
            return self.getTypedRuleContext(AgentSpeakParser.RulesContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_init_bels

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_bels" ):
                listener.enterInit_bels(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_bels" ):
                listener.exitInit_bels(self)




    def init_bels(self):

        localctx = AgentSpeakParser.Init_belsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_init_bels)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.beliefs()
            self.state = 53
            self.rules()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BeliefsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.LiteralContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_beliefs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBeliefs" ):
                listener.enterBeliefs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBeliefs" ):
                listener.exitBeliefs(self)




    def beliefs(self):

        localctx = AgentSpeakParser.BeliefsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_beliefs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 55
                    self.literal()
                    self.state = 56
                    self.match(AgentSpeakParser.T__0) 
                self.state = 62
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RulesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.LiteralContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,i)


        def log_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Log_exprContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_rules

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRules" ):
                listener.enterRules(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRules" ):
                listener.exitRules(self)




    def rules(self):

        localctx = AgentSpeakParser.RulesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rules)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__9) | (1 << AgentSpeakParser.ATOM) | (1 << AgentSpeakParser.VAR))) != 0):
                self.state = 63
                self.literal()
                self.state = 64
                self.match(AgentSpeakParser.T__1)
                self.state = 65
                self.log_expr(0)
                self.state = 66
                self.match(AgentSpeakParser.T__0)
                self.state = 72
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Init_goalsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.LiteralContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_init_goals

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInit_goals" ):
                listener.enterInit_goals(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInit_goals" ):
                listener.exitInit_goals(self)




    def init_goals(self):

        localctx = AgentSpeakParser.Init_goalsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_init_goals)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AgentSpeakParser.T__2:
                self.state = 73
                self.match(AgentSpeakParser.T__2)
                self.state = 74
                self.literal()
                self.state = 75
                self.match(AgentSpeakParser.T__0)
                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlansContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def plan(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.PlanContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.PlanContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_plans

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlans" ):
                listener.enterPlans(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlans" ):
                listener.exitPlans(self)




    def plans(self):

        localctx = AgentSpeakParser.PlansContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_plans)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__3) | (1 << AgentSpeakParser.T__6) | (1 << AgentSpeakParser.T__7))) != 0):
                self.state = 82
                self.plan()
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PlanContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def triggering_event(self):
            return self.getTypedRuleContext(AgentSpeakParser.Triggering_eventContext,0)


        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def context(self):
            return self.getTypedRuleContext(AgentSpeakParser.ContextContext,0)


        def body(self):
            return self.getTypedRuleContext(AgentSpeakParser.BodyContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_plan

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPlan" ):
                listener.enterPlan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPlan" ):
                listener.exitPlan(self)




    def plan(self):

        localctx = AgentSpeakParser.PlanContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_plan)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__3:
                self.state = 88
                self.match(AgentSpeakParser.T__3)
                self.state = 89
                self.atomic_formula()


            self.state = 92
            self.triggering_event()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__4:
                self.state = 93
                self.match(AgentSpeakParser.T__4)
                self.state = 94
                self.context()


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__5:
                self.state = 97
                self.match(AgentSpeakParser.T__5)
                self.state = 98
                self.body()


            self.state = 101
            self.match(AgentSpeakParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Triggering_eventContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_triggering_event

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTriggering_event" ):
                listener.enterTriggering_event(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTriggering_event" ):
                listener.exitTriggering_event(self)




    def triggering_event(self):

        localctx = AgentSpeakParser.Triggering_eventContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_triggering_event)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            _la = self._input.LA(1)
            if not(_la==AgentSpeakParser.T__6 or _la==AgentSpeakParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__2 or _la==AgentSpeakParser.T__8:
                self.state = 104
                _la = self._input.LA(1)
                if not(_la==AgentSpeakParser.T__2 or _la==AgentSpeakParser.T__8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 107
            self.literal()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_literal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLiteral" ):
                listener.enterLiteral(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLiteral" ):
                listener.exitLiteral(self)




    def literal(self):

        localctx = AgentSpeakParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==AgentSpeakParser.T__9:
                self.state = 109
                self.match(AgentSpeakParser.T__9)


            self.state = 112
            self.atomic_formula()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContextContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def log_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_context

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContext" ):
                listener.enterContext(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContext" ):
                listener.exitContext(self)




    def context(self):

        localctx = AgentSpeakParser.ContextContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_context)
        try:
            self.state = 116
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [AgentSpeakParser.T__7, AgentSpeakParser.T__9, AgentSpeakParser.T__11, AgentSpeakParser.T__14, AgentSpeakParser.ATOM, AgentSpeakParser.NUMBER, AgentSpeakParser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.log_expr(0)
                pass
            elif token in [AgentSpeakParser.T__10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 115
                self.match(AgentSpeakParser.T__10)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Log_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_log_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Simple_log_exprContext,0)


        def log_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Log_exprContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Log_exprContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLog_expr" ):
                listener.enterLog_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLog_expr" ):
                listener.exitLog_expr(self)



    def log_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = AgentSpeakParser.Log_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 20
        self.enterRecursionRule(localctx, 20, self.RULE_log_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 119
                self.simple_log_expr()
                pass

            elif la_ == 2:
                self.state = 120
                self.match(AgentSpeakParser.T__11)
                self.state = 121
                self.log_expr(4)
                pass

            elif la_ == 3:
                self.state = 122
                self.match(AgentSpeakParser.T__14)
                self.state = 123
                self.log_expr(0)
                self.state = 124
                self.match(AgentSpeakParser.T__15)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 136
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,12,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 134
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        localctx = AgentSpeakParser.Log_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_log_expr)
                        self.state = 128
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 129
                        self.match(AgentSpeakParser.T__12)
                        self.state = 130
                        self.log_expr(4)
                        pass

                    elif la_ == 2:
                        localctx = AgentSpeakParser.Log_exprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_log_expr)
                        self.state = 131
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 132
                        self.match(AgentSpeakParser.T__13)
                        self.state = 133
                        self.log_expr(3)
                        pass

             
                self.state = 138
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Simple_log_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def rel_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Rel_exprContext,0)


        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def getRuleIndex(self):
            return AgentSpeakParser.RULE_simple_log_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_log_expr" ):
                listener.enterSimple_log_expr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_log_expr" ):
                listener.exitSimple_log_expr(self)




    def simple_log_expr(self):

        localctx = AgentSpeakParser.Simple_log_exprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_simple_log_expr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 139
                self.literal()
                pass

            elif la_ == 2:
                self.state = 140
                self.rel_expr()
                pass

            elif la_ == 3:
                self.state = 141
                self.match(AgentSpeakParser.VAR)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def body_formula(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.Body_formulaContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.Body_formulaContext,i)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)




    def body(self):

        localctx = AgentSpeakParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.body_formula()
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==AgentSpeakParser.T__16:
                self.state = 145
                self.match(AgentSpeakParser.T__16)
                self.state = 146
                self.body_formula()
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def literal(self):
            return self.getTypedRuleContext(AgentSpeakParser.LiteralContext,0)


        def atomic_formula(self):
            return self.getTypedRuleContext(AgentSpeakParser.Atomic_formulaContext,0)


        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def rel_expr(self):
            return self.getTypedRuleContext(AgentSpeakParser.Rel_exprContext,0)


        def internal_action(self):
            return self.getTypedRuleContext(AgentSpeakParser.Internal_actionContext,0)


        def getRuleIndex(self):
            return AgentSpeakParser.RULE_body_formula

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody_formula" ):
                listener.enterBody_formula(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody_formula" ):
                listener.exitBody_formula(self)




    def body_formula(self):

        localctx = AgentSpeakParser.Body_formulaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_body_formula)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << AgentSpeakParser.T__2) | (1 << AgentSpeakParser.T__6) | (1 << AgentSpeakParser.T__7) | (1 << AgentSpeakParser.T__8) | (1 << AgentSpeakParser.T__17) | (1 << AgentSpeakParser.T__18))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 153
                self.literal()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.atomic_formula()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.match(AgentSpeakParser.VAR)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.rel_expr()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                self.internal_action()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atomic_formulaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ATOM(self):
            return self.getToken(AgentSpeakParser.ATOM, 0)

        def VAR(self):
            return self.getToken(AgentSpeakParser.VAR, 0)

        def list_of_terms(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AgentSpeakParser.List_of_termsContext)
            else:
                return self.getTypedRuleContext(AgentSpeakParser.List_of_termsContext,i)

